After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 748033 - gstglupload: Fix GstGLUpload leak
gstglupload: Fix GstGLUpload leak
Status: RESOLVED FIXED
Product: GStreamer
Classification: Platform
Component: gst-plugins-bad
git master
Other Linux
: Normal normal
: 1.5.1
Assigned To: GStreamer Maintainers
GStreamer Maintainers
Depends on:
Blocks: 746251
 
 
Reported: 2015-04-17 08:43 UTC by Matthieu Bouron
Modified: 2015-04-17 12:15 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
gstglupload: Fix GstGLUpload leak (2.24 KB, patch)
2015-04-17 08:43 UTC, Matthieu Bouron
none Details | Review
gstglupload: Fix GstGLUpload leak (2.29 KB, patch)
2015-04-17 08:59 UTC, Matthieu Bouron
none Details | Review
gstglupload: Unref GstGLUpload object and caps in ::stop() (2.91 KB, patch)
2015-04-17 12:13 UTC, Matthieu Bouron
committed Details | Review

Description Matthieu Bouron 2015-04-17 08:43:10 UTC
Created attachment 301798 [details] [review]
gstglupload: Fix GstGLUpload leak

Attached patch fix leak of GstGLUpload which owns a reference to the GstGLContext.

The GstGLUpload object is unref on state changed PAUSED=>READY as the GstGLContext is unref on this same state change in gstglimagesink.
Comment 1 Matthieu Bouron 2015-04-17 08:59:39 UTC
Created attachment 301803 [details] [review]
gstglupload: Fix GstGLUpload leak

Added reference to the bug in commit comment.
Comment 2 Sebastian Dröge (slomo) 2015-04-17 11:29:41 UTC
Review of attachment 301803 [details] [review]:

::: ext/gl/gstgluploadelement.c
@@ +99,3 @@
   bt_class->passthrough_on_same_caps = TRUE;
 
+  element_class->change_state = gst_gl_upload_change_state;

IMHO cleaner to do it in basetransform_class->stop :) Also less code for you to write
Comment 3 Matthieu Bouron 2015-04-17 12:13:11 UTC
Created attachment 301821 [details] [review]
gstglupload: Unref GstGLUpload object and caps in ::stop()
Comment 4 Sebastian Dröge (slomo) 2015-04-17 12:15:46 UTC
commit f283d72636c842f1561c9bc0316b974e32fb07d0
Author: Matthieu Bouron <matthieu.bouron@collabora.com>
Date:   Fri Apr 17 10:38:16 2015 +0200

    gluploadelement: Unref GstGLUpload object and caps in ::stop()
    
    Fix leak of the GstGLUpload object.
    
    https://bugzilla.gnome.org/show_bug.cgi?id=748033