gluploadelement: Unref GstGLUpload object and caps in ::stop()

Fix leak of the GstGLUpload object.

https://bugzilla.gnome.org/show_bug.cgi?id=748033